[project]
name = "sandcastle-py-test"
version = "0.1.0"
description = "A tiny sandcastle CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sandcastle = "sandcastle.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 88
