[project]
name = "sandcastle-py-test"
version = "0.1.0"
description = "Small command line tools for sandcastle-py-test"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hn = "hn_cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["hn_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88
exclude = [".sandcastle"]

[tool.pytest.ini_options]
pythonpath = ["."]
